# irodori-tts-gui

./: .gitignore  .gitmodules  README.md  run.bat  setup.bat
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: projects.py
backend/app/models/: project.py
backend/app/schemas/: api.py
backend/app/services/: app_log_service.py  export_service.py  generation_service.py  job_registry.py  line_import_service.py  project_store.py  reference_service.py  runtime_manager.py
backend/tests/: test_export_service.py  test_generation_service.py  test_job_registry.py  test_line_import_service.py  test_project_model.py  test_project_store.py  test_projects_api.py  test_reference_service.py  test_runtime_manager.py
docs/communication/: demand.md
docs/superpowers/plans/: 2026-06-14-irodori-gui-iteration.md  2026-06-14-irodori-gui-mvp.md  2026-06-14-irodori-gui-polish.md  2026-06-15-irodori-gui-status.md  2026-06-16-irodori-gui-frontend-logging-and-selection.md  2026-06-16-irodori-gui-generation-stability.md  2026-06-16-irodori-gui-regeneration-followup.md  2026-06-17-irodori-gui-editing-and-playback.md
docs/superpowers/specs/: 2026-06-14-irodori-gui-design.md  2026-06-14-irodori-gui-iteration-design.md  2026-06-14-irodori-gui-polish-design.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  router.tsx  styles.css  types.ts
scripts/: launch_helpers.ps1  run.ps1  setup.ps1
scripts/tests/: launch_helpers.tests.ps1
(+26 files in other folders)
