[project]
name = "irodori-tts-gui-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.136,<0.137",
  "httpx>=0.28,<0.29",
  "numpy>=1.26,<3",
  "pydantic>=2.13,<3",
  "python-multipart>=0.0.20,<0.1",
  "soundfile>=0.13,<0.14",
  "uvicorn[standard]>=0.41,<0.42",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
